# arabic-editorial-proofreading

./: .env.example  .gcloudignore  .gitignore  Dockerfile  GEMINI_SYSTEM_PROMPT.txt  PROJECT_CONTEXT.md  README.md  README_FIRST.md  deploy.sh  pyproject.toml
app/: __init__.py  category_canonicalization.py  config.py  main.py
benchmark_tuning_v1/: README.md  expectations.json
benchmark_v2/: .gitignore  README.md  __init__.py
data/: app.db
docs/: DATA_STORAGE.md  DEMO.md  DEPLOY_GCP_DEMO.md  EDITORIAL_LABELING.md  PHASE7_START.md  PUBLIC_CORPORA.md  RUN3_PUNCTUATION_ANALYSIS.md  RUN4_NO_PUNCTUATION.md  SPRINT2.md  UI_WIRING.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  vite.config.ts
handoff/: CONTEXT.md  README.md  from_chatgpt.md  to_chatgpt.md
prompts/: 01_INITIAL_BUILD_PROMPT.txt  02_IMPORT_PAIRS_PROMPT.txt  03_GEMINI_INTEGRATION_PROMPT.txt  04_GCP_DEPLOYMENT_PROMPT.txt
scripts/: _check_demo.sh  _run_pytest.py  adjudicate_editorial_corrections.py  analyze_run3_false_positives.py  apply_expert_editorial_labels.py  attribute_run5_recall_regression.py  audit_editorial_labels_consistency.py  build_editorial_calibration_packet.py  build_error_analysis_gemini_run1.py  build_priority_label_sheet.py  build_sprint2_evidence_package.py  compare_evaluation_runs.py  demo_poc.py  deploy_gcp_demo.ps1  deploy_gcp_demo.sh  download_dataset.py  download_dataset_gcp.ps1  pull_public_corpora.py  replay_contradiction_salvage.py  replay_editorial_gates.py  run_silence_eval.py  sample_silence_set.py  score_batch_articles.py  score_editorial_labels.py  validate_ai.py  (+6 more)
(+382 files in other folders)
