[project]
name = "arabic-editorial-proofreading"
version = "0.6.0"
description = "Arabic Editorial Proofreading Engine prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "regex>=2024.11.6",
  "beautifulsoup4>=4.12.0",
  "python-docx>=1.1.0",
  "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.0",
  "ruff>=0.8.0",
]
gemini = [
  "google-genai>=1.0.0",
]
gcs = [
  "google-cloud-storage>=2.18.0",
]
corpora = [
  "datasets>=2.20.0",
  "pyarrow>=15.0.0",
]

[project.scripts]
proofread-import-pairs = "app.cli.import_pairs:main"
proofread-evaluate = "app.cli.evaluate:main"
proofread-run-benchmark = "app.cli.run_benchmark:main"
proofread-upload-dataset = "app.cli.upload_dataset:main"
proofread-download-dataset = "app.cli.download_dataset:main"
benchmark-v2-score = "benchmark_v2.private.scorer.cli:main"
benchmark-v2-run = "benchmark_v2.public.run_engine:main"

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "benchmark_v2*"]
exclude = ["benchmark_v2.private.gold*", "benchmark_v2.results*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
